src/objects/c2g__TransactionReconciliationHistory__c.object
<CustomObject>
    <fields>
        <fullName>c2g__ReconciliationAction__c</fullName>
        <label>Reconciliation Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Unreconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Transaction Reconciliation Histories</relationshipLabel>
        <relationshipName>TransactionReconciliationHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Reconciliation</label>
        <referenceTo>c2g__TransactionReconciliation__c</referenceTo>
        <relationshipLabel>Transaction Reconciliation Histories</relationshipLabel>
        <relationshipName>TransactionReconciliationHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Reconciliation History</label>
    <nameField>
        <displayFormat>TXNRH-{00000}</displayFormat>
        <label>TXN Reconciliation History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Reconciliation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>